objects/Field_Capacity__c.object
<CustomObject>
    <fields>
        <fullName>Capacity_Date__c</fullName>
        <label>Capacity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Forecasted_Capacity__c</fullName>
        <label>Forecasted Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Forecasted_Demand__c</fullName>
        <label>Forecasted Demand</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Forecasted_Gap__c</fullName>
        <formula>Forecasted_Capacity__c - Forecasted_Demand__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forecasted Gap</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Territory</label>
        <referenceTo>ServiceTerritory</referenceTo>
        <relationshipLabel>Field Capacity</relationshipLabel>
        <relationshipName>Field_Capacity</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Field Capacity</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Service_Territory__c</columns>
        <columns>Capacity_Date__c</columns>
        <columns>Forecasted_Capacity__c</columns>
        <columns>Forecasted_Demand__c</columns>
        <columns>Forecasted_Gap__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FC-{0000}</displayFormat>
        <label>Field Capacity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field Capacity</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>